--- a/comments.html
+++ b/comments.html
@@ -1,157 +1,204 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Komentar Pengunjung</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Komentar — Muslih Fvnky Shop</title>
   <style>
-    body {
-      background: linear-gradient(to bottom right, #04323d, #065f46);
-      min-height: 100vh;
-      font-family: 'Inter', sans-serif;
+    /* Simple style yang mirip tampilanmu (dark teal background). */
+    :root{ --accent:#08b07b; --card:#0f2f31; --muted:#bfc9c8; --danger:#e25454; }
+    body{
+      margin:0;
+      font-family:Inter, system-ui, Arial;
+      background: radial-gradient(1200px 400px at 10% 10%, rgba(2,50,50,0.35), transparent),
+                  radial-gradient(900px 300px at 90% 80%, rgba(0,100,90,0.25), transparent),
+                  #003b3a;
+      color:#e6f0ef;
+      -webkit-font-smoothing:antialiased;
     }
-    .star {
-      font-size: 2rem;
-      cursor: pointer;
-      color: #d1d5db;
-    }
-    .star.selected {
-      color: #facc15;
-    }
+    .wrap{ max-width:820px; margin:28px auto; padding:28px; }
+    .card{ background: linear-gradient(180deg, rgba(255,255,255,0.03), rgba(0,0,0,0.05)); border-radius:14px; padding:18px; box-shadow:0 6px 18px rgba(0,0,0,0.45); }
+    h1{ margin:0 0 16px; font-size:28px; color:#fff; }
+    label{ display:block; margin-top:14px; color:var(--muted); font-weight:600; }
+    input[type="text"], textarea{ width:100%; padding:14px; border-radius:10px; border:0; background:rgba(255,255,255,0.95); color:#222; font-size:16px; box-sizing:border-box; }
+    textarea{ min-height:110px; resize:vertical; }
+    .stars{ margin:10px 0; }
+    .star{ font-size:28px; color:rgba(255,215,0,0.25); cursor:pointer; margin-right:6px; }
+    .star.active{ color:#ffd233; }
+    .file-row{ display:flex; align-items:center; gap:12px; margin-top:10px; }
+    .btn{ padding:12px 18px; border-radius:10px; border:0; cursor:pointer; font-weight:700; }
+    .btn-primary{ background:var(--accent); color:#072; color:#003; color: #002; color:#002; color:#fff; background:#04c38f; box-shadow:0 6px 0 rgba(0,0,0,0.12); }
+    .btn-muted{ background:rgba(255,255,255,0.08); color:#ddd; }
+    .msg{ margin-top:12px; padding:12px; border-radius:10px; background:rgba(0,0,0,0.35); color:#ffd; }
+    .error{ color:#fff; background: rgba(255,0,0,0.14); border:1px solid rgba(255,0,0,0.18); }
+    .comment-list{ margin-top:18px; display:grid; gap:12px; }
+    .comment-item{ background: rgba(0,0,0,0.18); padding:12px; border-radius:10px; }
+    .comment-item img{ max-width:160px; border-radius:8px; display:block; margin-top:8px; }
+    .progress{ height:8px; background: rgba(255,255,255,0.06); border-radius:6px; overflow:hidden; margin-top:8px; }
+    .progress > i{ display:block; height:100%; width:0%; background:linear-gradient(90deg,#39d6a3,#06b786); }
+    .small{ font-size:13px; color:var(--muted); }
   </style>
 </head>
-<body class="flex flex-col items-center p-4">
-  <div class="w-full max-w-2xl bg-white/10 backdrop-blur-lg rounded-2xl p-6 shadow-lg text-white">
-    <h1 class="text-2xl font-bold mb-4">Komentar Pengunjung ⭐</h1>
+<body>
+  <div class="wrap">
+    <div class="card">
+      <h1>Komentar Pengunjung ⭐</h1>
 
-    <!-- Form Komentar -->
-    <form id="commentForm" class="space-y-4">
-      <div>
-        <label class="block mb-1">Nama</label>
-        <input type="text" id="name" required class="w-full p-2 rounded-lg text-black" placeholder="Nama Anda">
+      <label>Nama</label>
+      <input id="name" type="text" placeholder="Nama kamu (atau panggilan)">
+
+      <label>Komentar</label>
+      <textarea id="comment" placeholder="Tulis pengalamanmu"></textarea>
+
+      <label>Rating</label>
+      <div class="stars" id="stars">
+        <span class="star" data-value="1">☆</span>
+        <span class="star" data-value="2">☆</span>
+        <span class="star" data-value="3">☆</span>
+        <span class="star" data-value="4">☆</span>
+        <span class="star" data-value="5">☆</span>
+        <span class="small" id="ratingText" style="margin-left:12px;color:var(--muted)">Klik satu bintang untuk memilih rating.</span>
       </div>
 
-      <div>
-        <label class="block mb-1">Komentar</label>
-        <textarea id="comment" required class="w-full p-2 rounded-lg text-black" rows="3" placeholder="Tulis komentar Anda..."></textarea>
+      <label>Upload Foto (opsional, max 5 MB)</label>
+      <div class="file-row">
+        <input id="file" type="file" accept="image/*">
+        <div id="fileName" class="small">Tidak ada file yang dipilih</div>
+      </div>
+      <div class="progress" style="margin-bottom:8px"><i id="bar"></i></div>
+
+      <div style="margin-top:12px; display:flex; gap:10px;">
+        <button id="sendBtn" class="btn btn-primary">Kirim Komentar</button>
+        <button id="resetBtn" class="btn btn-muted">Reset</button>
       </div>
 
-      <div>
-        <label class="block mb-1">Rating</label>
-        <div id="rating" class="flex space-x-2">
-          <span class="star" data-value="1">★</span>
-          <span class="star" data-value="2">★</span>
-          <span class="star" data-value="3">★</span>
-          <span class="star" data-value="4">★</span>
-          <span class="star" data-value="5">★</span>
-        </div>
-      </div>
+      <div id="msg" class="msg" style="display:none;"></div>
+    </div>
 
-      <div>
-        <label class="block mb-1">Upload Foto (opsional, max 5 MB)</label>
-        <input type="file" id="photo" accept="image/*" class="w-full text-white">
-      </div>
-
-      <div class="flex space-x-2">
-        <button type="submit" class="bg-emerald-500 px-4 py-2 rounded-lg hover:bg-emerald-600">Kirim Komentar</button>
-        <button type="reset" class="bg-gray-500 px-4 py-2 rounded-lg hover:bg-gray-600">Reset</button>
-      </div>
-    </form>
-
-    <!-- Notifikasi -->
-    <p id="statusMsg" class="mt-4 text-center hidden"></p>
-
-    <!-- Daftar Komentar -->
-    <div id="commentsList" class="mt-8 space-y-4"></div>
+    <div class="comment-list" id="list"></div>
   </div>
 
-  <script>
-    // Rating sistem
-    let selectedRating = 0;
-    document.querySelectorAll('.star').forEach(star => {
-      star.addEventListener('click', () => {
-        selectedRating = star.getAttribute('data-value');
-        document.querySelectorAll('.star').forEach(s => s.classList.remove('selected'));
-        for (let i = 0; i < selectedRating; i++) {
-          document.querySelectorAll('.star')[i].classList.add('selected');
-        }
-      });
+<script>
+(function(){
+  const stars = document.getElementById("stars");
+  const starEls = stars.querySelectorAll(".star");
+  const ratingText = document.getElementById("ratingText");
+  let rating = 0;
+
+  starEls.forEach(s => {
+    s.addEventListener("click", () => {
+      rating = Number(s.dataset.value);
+      starEls.forEach(x => x.classList.toggle("active", Number(x.dataset.value) <= rating));
+      ratingText.textContent = `Kamu memilih ${rating} bintang`;
     });
+  });
 
-    // Submit form
-    document.getElementById('commentForm').addEventListener('submit', async (e) => {
-      e.preventDefault();
+  const fileInput = document.getElementById("file");
+  const fileName = document.getElementById("fileName");
+  const bar = document.getElementById("bar");
+  fileInput.addEventListener("change", () => {
+    if (fileInput.files && fileInput.files.length) {
+      fileName.textContent = fileInput.files[0].name + " (" + Math.round(fileInput.files[0].size/1024) + " KB)";
+    } else fileName.textContent = "Tidak ada file yang dipilih";
+  });
 
-      const name = document.getElementById('name').value.trim();
-      const comment = document.getElementById('comment').value.trim();
-      const file = document.getElementById('photo').files[0];
-      const statusMsg = document.getElementById('statusMsg');
+  const msg = document.getElementById("msg");
+  function showMessage(text, isError=false) {
+    msg.style.display = "block";
+    msg.textContent = text;
+    msg.className = "msg" + (isError ? " error" : "");
+  }
+  function hideMessage(){ msg.style.display = "none"; msg.textContent = ""; msg.className = "msg"; }
 
-      if (!selectedRating) {
-        statusMsg.textContent = "Silakan pilih rating ⭐";
-        statusMsg.className = "mt-4 text-center text-yellow-400";
-        statusMsg.classList.remove("hidden");
-        return;
-      }
+  const sendBtn = document.getElementById("sendBtn");
+  const resetBtn = document.getElementById("resetBtn");
+  const nameInput = document.getElementById("name");
+  const commentInput = document.getElementById("comment");
+  const list = document.getElementById("list");
 
-      const formData = new FormData();
-      formData.append("name", name);
-      formData.append("comment", comment);
-      formData.append("rating", selectedRating);
-      if (file) formData.append("photo", file);
+  resetBtn.addEventListener("click", () => {
+    nameInput.value = "";
+    commentInput.value = "";
+    rating = 0;
+    starEls.forEach(x => x.classList.remove("active"));
+    fileInput.value = "";
+    fileName.textContent = "Tidak ada file yang dipilih";
+    bar.style.width = "0%";
+    hideMessage();
+  });
 
-      try {
-        const res = await fetch("/api/upload", {
-          method: "POST",
-          body: formData,
-        });
+  sendBtn.addEventListener("click", async () => {
+    hideMessage();
+    const nm = nameInput.value.trim();
+    const cm = commentInput.value.trim();
+    if (!nm || !cm) return showMessage("Nama dan komentar wajib diisi.", true);
 
-        const data = await res.json();
-        if (res.ok) {
-          statusMsg.textContent = "✅ Komentar berhasil dikirim!";
-          statusMsg.className = "mt-4 text-center text-green-400";
-          statusMsg.classList.remove("hidden");
-          document.getElementById("commentForm").reset();
-          selectedRating = 0;
-          document.querySelectorAll('.star').forEach(s => s.classList.remove('selected'));
-          loadComments();
-        } else {
-          statusMsg.textContent = "❌ Gagal mengirim: " + (data.error || "Server error");
-          statusMsg.className = "mt-4 text-center text-red-400";
-          statusMsg.classList.remove("hidden");
-        }
-      } catch (err) {
-        statusMsg.textContent = "❌ Error koneksi: " + err.message;
-        statusMsg.className = "mt-4 text-center text-red-400";
-        statusMsg.classList.remove("hidden");
-      }
-    });
-
-    // Load komentar
-    async function loadComments() {
-      try {
-        const res = await fetch("https://dl.dropboxusercontent.com/scl/fi/3l5vtyby70p8rj9hd7l1n/comments.json?rlkey=d92c7nngiwx54y0ukzdx8g9b3&dl=0");
-        if (!res.ok) return;
-        const comments = await res.json();
-        const list = document.getElementById("commentsList");
-        list.innerHTML = "";
-        comments.reverse().forEach(c => {
-          const div = document.createElement("div");
-          div.className = "p-4 bg-white/20 rounded-lg";
-          div.innerHTML = `
-            <p class="font-bold">${c.name} <span class="text-yellow-400">(${c.rating}⭐)</span></p>
-            <p>${c.comment}</p>
-            ${c.photo ? `<img src="${c.photo}" class="mt-2 max-h-40 rounded-lg">` : ""}
-          `;
-          list.appendChild(div);
-        });
-      } catch (err) {
-        console.error("Gagal load komentar:", err);
-      }
+    const fd = new FormData();
+    fd.append("name", nm);
+    fd.append("comment", cm);
+    fd.append("rating", rating);
+    if (fileInput.files && fileInput.files[0]) {
+      fd.append("file", fileInput.files[0]);
     }
 
-    loadComments();
-  </script>
+    sendBtn.disabled = true;
+    sendBtn.textContent = "Mengirim...";
+
+    try {
+      const resp = await fetch("/api/upload", {
+        method: "POST",
+        body: fd
+      });
+
+      // Jika server mengembalikan JSON -> parse, kalau bukan JSON -> tampilkan text error
+      let data;
+      const ct = resp.headers.get("content-type") || "";
+      if (ct.includes("application/json")) {
+        data = await resp.json();
+      } else {
+        // kemungkinan HTML/error page or plain text
+        const txt = await resp.text();
+        throw new Error("Server tidak merespon JSON: " + (txt || resp.statusText));
+      }
+
+      if (!resp.ok || data?.error) {
+        const d = data?.error || data?.details || JSON.stringify(data);
+        throw new Error(d || "Upload gagal");
+      }
+
+      // sukses
+      showMessage("Komentar terkirim.", false);
+
+      // tambahkan ke list komentar yg ada di halaman (live)
+      const c = data.comment || {};
+      const node = document.createElement("div");
+      node.className = "comment-item card";
+      node.innerHTML = `<strong>${escapeHtml(c.name)}</strong>
+                        <div class="small">${new Date(c.date).toLocaleString()}</div>
+                        <div style="margin-top:8px">${escapeHtml(c.comment)}</div>
+                        ${c.image ? `<img src="${c.image}" alt="foto" />` : ""}`;
+      list.prepend(node);
+
+      // reset form sedikit
+      commentInput.value = "";
+      fileInput.value = "";
+      fileName.textContent = "Tidak ada file yang dipilih";
+      bar.style.width = "0%";
+    } catch (err) {
+      console.error("Upload error:", err);
+      showMessage("❌ Error koneksi: " + (err.message || "Gagal mengirim"), true);
+    } finally {
+      sendBtn.disabled = false;
+      sendBtn.textContent = "Kirim Komentar";
+    }
+  });
+
+  // helper safe text
+  function escapeHtml(s) {
+    if (!s) return "";
+    return s.replace(/[&<>"'`]/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;','`':'&#x60;'}[c]));
+  }
+})();
+</script>
 </body>
 </html>
